src/main/java/com/example/parkinglot/web/rest/errors/package-info.java
/**
 * Rest layer error handling.
 */
package com.example.parkinglot.web.rest.errors;
